# fast-api-template

./: .dockerignore  .gitignore  .gitlab-ci.yml  .releaserc.json  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.ci.yaml  docker-compose.local.yaml  pyproject.toml  values.yaml
api/: app.py  params.py
api/authentication/: backend.py  classes.py  depends.py  json_web_token.py
api/exceptions/: __init__.py  auth.py  base_exception.py  permissions.py  token.py
api/methods/general/: favicon.py  health.py  home.py
api/methods/user/: user_info.py
api/middlewares/: __init__.py  context.py
api/responses/: __init__.py  health.py  home.py  message.py  user_info.py
api/routers/: general.py  user.py
common_functions/: alchemy.py  dates.py  env.py  strings.py
config/: const.py  context.py  logs.py  sentry.py
config/settings/: __init__.py  database.py  project.py
db/: base_model.py  session.py
db/migrations/: env.py
db/migrations/versions/: 00_init.py
db/models/: user.py
db/selectors/: __init__.py  user.py
management_commands/: create_user.py  generate_token.py
tests/: conftest.py  const.py  counters.py  helper_classes.py
tests/factories/: __init__.py  base_factory.py  user.py
tests/fixtures/: api_client.py  db.py  event_loop.py  user.py
tests/schemas/: __init__.py  const.py  homepage.py
tests/test_api/: test_methods.py
tests/test_api/auth/: test_auth_closed_api_methods.py
tests/test_api/general/: test_home_page.py
tests/test_api/user/: test_user_info.py
tests/test_common_functions/: test_camel_to_snake_case.py
